--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-    "name": "news-explorer-api",
-    "version": "1.0.0",
-    "description": "Backend for Diploma Project",
+    "name": "places",
+    "version": "1.1.0",
+    "description": "Backend for news-explorer-api",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/oshusha/news-explorer-api.git"
+    },
+    "keywords": [],
     "author": "Anastasia Oshurkova",
     "license": "ISC",
     "dependencies": {
@@ -12,7 +17,9 @@
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "~4.16.1",
+        "express-rate-limit": "^5.1.3",
         "express-winston": "^4.0.3",
+        "helmet": "^3.22.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.4",
         "mongoose": "^5.9.15",
@@ -21,8 +28,8 @@
         "winston": "^3.2.1"
     },
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
+        "start": "node app.js",
+        "dev": "nodemon app.js",
         "eslint": "eslint --ext=.js ./",
         "eslintFix": "eslint --ext=.js ./ --fix"
     },
