--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "places",
+    "name": "newsexplorer",
     "version": "1.1.0",
     "description": "Backend for news-explorer-api",
     "repository": {
