fix: after review

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
     "extends": ["airbnb-base"],
     "rules": {
-        "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-        "indent": [ "error", 4 ]
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }]
     }
 }
