--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express-rate-limit": "^5.1.3",
         "express-winston": "^4.0.3",
         "helmet": "^3.22.0",
+        "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.4",
         "mongoose": "^5.9.15",
